--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve --mode dev",
+    "build": "vue-cli-service build --mode prod",
+    "build:test": "vue-cli-service build --mode test",
     "lint": "vue-cli-service lint",
     "test": "echo \\\"Error: no test specified\\\" && exit 1"
   },
@@ -41,11 +42,14 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "axios": "^0.24.0",
     "babel-eslint": "^10.1.0",
+    "compression-webpack-plugin": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "image-webpack-loader": "^8.0.1",
+    "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
