--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   "devDependencies": {
     "axios": "^0.24.0",
     "commander": "^8.3.0",
+    "del": "^6.0.0",
     "download-git-repo": "^3.0.2",
+    "execa": "^5.1.1",
     "inquirer": "^8.2.0",
-    "ora": "^6.0.1",
+    "ora": "^5.4.0",
     "shell": "^0.8.5"
   },
   "bin": {
