--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -14,16 +14,18 @@ release_package_to_npm_cn:
       set -e
       timestr=$(date +'%Y-%m-%d')
       if [[ $NPM_PACKAGE_VERSION -eq "" ]]; then
-        NPM_PACKAGE_VERSION=$CI_COMMIT_BRANCH_$timestr_$CI_COMMIT_SHORT_SHA
+        new_branch_name="${CI_COMMIT_BRANCH/_/-}" #use - replace _ for publish version
+        NPM_PACKAGE_VERSION="0.0.1-$new_branch_name-$timestr-$CI_COMMIT_SHORT_SHA"
       fi
-
+      
       # Upload javascript package to NPM
       echo "registry=https://"$NPM_REGISTRY > ~/.npmrc
-      echo "//"$NPM_REGISTRY"/:_authToken=\"$GITLAB_NPM_TOKEN\"" >> ~/.npmrc
-
+      echo "//"$NPM_REGISTRY":_authToken=\"$GITLAB_NPM_TOKEN\"" >> ~/.npmrc
+    
       VERSION_LINE="\"version\": \""$NPM_PACKAGE_VERSION"\","
       sed -i -e 's#"version".*#'"$VERSION_LINE"'#g' package.json
-      npm publish 
+      echo "before publish"
+    - npm publish 
   tags:
     - pod
   rules:
