--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -3,11 +3,11 @@ stages:
 
 variables:
   NPM_REGISTRY: npm.infra.wish-cn.com/
-  NPM_PACKAGE_VERSION: ""
-  MANUAL_RELEASE: ""
+  NPM_PACKAGE_VERSION: ''
+  MANUAL_RELEASE: ''
 
 release_package_to_npm_cn:
-  image: node:12
+  image: harbor.infra.wish-cn.com/base/node-wnpm:16.17.0
   stage: release
   script:
     - |
@@ -17,15 +17,15 @@ release_package_to_npm_cn:
         new_branch_name="${CI_COMMIT_BRANCH/_/-}" #use - replace _ for publish version
         NPM_PACKAGE_VERSION="0.0.1-$new_branch_name-$timestr-$CI_COMMIT_SHORT_SHA"
       fi
-      
+
       # Upload javascript package to NPM
       echo "registry=https://"$NPM_REGISTRY > ~/.npmrc
       echo "//"$NPM_REGISTRY":_authToken=\"$GITLAB_NPM_TOKEN\"" >> ~/.npmrc
-    
+
       VERSION_LINE="\"version\": \""$NPM_PACKAGE_VERSION"\","
       sed -i -e 's#"version".*#'"$VERSION_LINE"'#g' package.json
       echo "before publish"
-    - npm publish 
+    - npm publish
   tags:
     - pod
   rules:
